# python-jenkins-starter

./: .gitignore  .pre-commit-config.yaml  Jenkinsfile  Makefile  README.md  pyproject.toml
jenkins/: Dockerfile  docker-compose.yml
src/app/: __init__.py  hello.py
tests/: test_hello.py
