[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
version = "0.1.0"
description = "Practice project for Python + Jenkins + Git"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Chris"}]

dependencies = []

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
  "black>=24.0.0",
  "mypy>=1.8.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pre-commit>=3.6.0"
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["venv", ".venv", "build", "dist"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]
